# AzureProjects

./: .env  pyproject.toml
basics/: create_resource_group.sh  create_simple.sh  delete_resource_group.sh
blob/: create_storage_blob.sh  download_file.sh  script.py  upload.sh
python_pipeline/: create_data_factory.sh
