[tool.poetry]
name = "postgreproject"
version = "0.1.0"
description = ""
authors = ["Serge Buasa <sergebuasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
